[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_matter_lib"
description = "Library for reusable code of the Quantum Matter group at ESPCI"
authors = [
    {name = "Louis Grandvaux", email = "louis.grandvaux@espci.fr"}
]
version = "0.1"
requires-python = ">=3.12"
dependencies = [
    "pymeasure",
    "numpy",
    "MCL",
    "nanonisTCP"
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENCE"]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx-pyproject"
]

[tool.setuptools]
py-modules = ['quantum_matter_lib']

[tool.setuptools.package-data]
quantum_matter_lib = ['data']

[tool.sphinx-pyproject]
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.autosummary",
    "sphinx.ext.mathjax"
]
html_theme = "classic"